2007-07-07  higepon  <higepon@users.sourceforge.jp>

        * Net/net_server_with_kernel/main.cpp: Modified net server to do interrupt functions on kernel.
        

2007-06-25  higepon  <higepon@users.sourceforge.jp>

        * Graphics/bitmap/Form1.cpp (class Form1): Added (x, y) command line arguments.

        * Graphics/bitmap : Added SAKEBI.JPG.

        * Shells/mshell/Form1.cpp : When startup, call (on-gui-start) procedure.

2007-06-24  higepon  <higepon@users.sourceforge.jp>

        * Net/uip/Mona/uipopt.h : Set IP Address 10.0.2.15 for QEMU.
                                  You execute QEMU  with follow options "-net nic -net user -redir tcp:5555:10.0.2.15:80 ".

        * Sysutils/libPci/Pci.cpp : conver to utf-8.

        * Net/uip/Mona/NE2000.cpp: conver to utf-8.

2007-06-20  higepon  <higepon@users.sourceforge.jp>

        * Net/uip/Mona/NicServer.cpp : Fixed for a Mona 0.3.0.

        * Net/uip/Mona/Makefile (MONADIR): Fixed $(MONADIR) env.

2007-06-17  higepon  <higepon@users.sourceforge.jp>

        * Makefile: Add audio_server2/client build.

2007-06-03  higepon  <higepon@users.sourceforge.jp>

        * Set svn:inore.

2007-06-02  higepon  <higepon@users.sourceforge.jp>

        * Gui/libgui/System/Mona/Info.cpp (Mona): Add gui_move_window.

2007-06-01  higepon  <higepon@users.sourceforge.jp>

        * Gui/gui/window.cpp (WindowHandler): Add MSG_GUISERVER_GETTITLE.

        * Gui/libgui/System/Mona/Info.cpp (gui_get_window_title): Add.

        * Gui/gui/servers/gui.h : Add MSG_GUISERVER_GETTITLE.

        * Gui/libgui/System/Mona/Info.cpp (gui_enum_windows): Add.

2007-05-31  higepon  <higepon@users.sourceforge.jp>

        * Gui/libgui/System/Mona/Info.cpp : Add.

        * Gui/libgui/gui/System/Mona/Info.h: Add.

        * Gui/gui/servers/gui.h (struct): Add name attribute to guiserver_window.
                                  (enum): Add MSG_GUISERVER_ENUMWINDOWS.

2007-05-30  higepon  <higepon@users.sourceforge.jp>
