@@ -14,6 +14,4 @@ else
 include $(SHAREDIR)/configs/monapi-el5.inc
 endif
 
-CXXFLAGS += -DDEBUG -I . -I ./boost -I$(INCDIR)/stlport -I $(INCDIR)/onig
-
-include dependencies
+-include dependencies
